deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-production
spec:
  selector:
    matchLabels:
      app: model
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: model
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/model:master
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "--preload", "-t", "30", "-k", "aiohttp.worker.GunicornWebWorker", "model.app:get_app()"]
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter:latest
        ports:
        - containerPort: 9121
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-staging
spec:
  selector:
    matchLabels:
      app: model
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: model
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/model:devel
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "--preload", "-t", "30", "-k", "aiohttp.worker.GunicornWebWorker", "model.app:get_app()"]
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter:latest
        ports:
        - containerPort: 9121
