ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: model-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    - api-staging.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /model
        backend:
          serviceName: model-production
          servicePort: 80
  - host: api-staging.dd-decaf.eu
    http:
      paths:
      - path: /model
        backend:
          serviceName: model-staging
          servicePort: 80
